<resources>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button!</string>
    <string name="EditText"> Type email here </string>
    <string name="Switch"> Switch On/Off</string>
    <string name="app_name">Lab 6</string>
    <string name="Check">Check this out!</string>
    <string name="Widgets">Here are my widgets:</string>
    <string name="EnterEmail">Enter your email:</string>
    <string name="Password">Type your password</string>
    <string name="Profile">Your profile</string>
    <string name="Name">Your name:</string>
    <string name="EnterName">Enter your name</string>
    <string name="Email">Your email:</string>
    <string name="Pic">Your picture:</string>
    <string name="Login">LOGIN</string>
    <string name="TakePic">Click the button above to take a picture</string>
    <string name="Chat">Go to chat</string>
    <string name="Send">Send</string>
    <string name="Type">Type here</string>
    <string name="Receive">Receive</string>
    <string name="Toolbar">Go to Toolbar Page</string>
    <string name="action_settings">Settings.</string>
</resources>
