<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Profile"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:inputType="textEmailAddress"

        android:hint="@string/EnterName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textSize="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/emailaddress"
        android:layout_height="fill_parent"
        android:hint="@string/EnterEmail"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pic"
        android:textSize="20dp"
        />
<ImageButton
    android:id="@+id/imageb"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:src="@android:drawable/picture_frame"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TakePic"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/chatbutton"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:text="@string/Chat"
        />

    <Button
        android:id="@+id/toolbarbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Toolbar"
        />

    <Button
        android:id="@+id/weatherbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Weather"/>

</LinearLayout>