<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="4">


        <TextView
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/Widgets"
            android:textSize="30dp"
            android:layout_columnSpan="2"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/ButtonText"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"/>

            <ImageButton
                android:id="@+id/image"
                android:src="@drawable/flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="fill"

                />

        <CheckBox
            android:text="@string/Check"
            android:layout_row="2"
            android:layout_column="0" />

        <Switch
            android:text="@string/Switch"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="2"
            android:layout_column="1"

            />

    <EditText
        android:hint="@string/EditText"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:inputType="textPersonName"
        android:layout_gravity="fill_horizontal"

        />



    </GridLayout>


